(executable
 (name p001)
 (modules p001)
 (libraries euler))

(executable
 (name p002)
 (modules p002)
 (libraries euler))

(executable
 (name p003)
 (modules p003)
 (libraries euler))

(executable
 (name p004)
 (modules p004)
 (libraries euler))

(executable
 (name p005)
 (modules p005)
 (libraries euler))

(executable
 (name p006)
 (modules p006)
 (libraries euler))

(executable
 (name p007)
 (modules p007)
 (libraries euler))

(executable
 (name p008)
 (modules p008)
 (libraries euler))

(executable
 (name p009)
 (modules p009)
 (libraries euler))

(executable
 (name p010)
 (modules p010)
 (libraries euler))

(executable
 (name p011)
 (modules p011)
 (libraries euler))

(executable
 (name p012)
 (modules p012)
 (libraries euler))

(executable
 (name p013)
 (modules p013)
 (libraries euler zarith))

(executable
 (name p014)
 (modules p014)
 (libraries euler))

(executable
 (name p015)
 (modules p015)
 (libraries euler zarith))

(executable
 (name p016)
 (modules p016)
 (libraries euler zarith))

(executable
 (name p017)
 (modules p017)
 (libraries euler))

(executable
 (name p018)
 (modules p018)
 (libraries euler))

(executable
 (name p019)
 (modules p019)
 (libraries euler))

(executable
 (name p020)
 (modules p020)
 (libraries euler zarith))

(executable
 (name p021)
 (modules p021)
 (libraries euler))

(executable
 (name p022)
 (modules p022)
 (libraries euler))

(executable
 (name p023)
 (modules p023)
 (libraries euler))

(executable
 (name p024)
 (modules p024)
 (libraries euler))

(executable
 (name p025)
 (modules p025)
 (libraries euler zarith))

(executable
 (name p026)
 (modules p026)
 (libraries euler zarith))

(executable
 (name p027)
 (modules p027)
 (libraries euler zarith))
